--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 body{
-    background-color: rgb(20, 239, 108);
+    background-color: yellow;
     color: white;
 
 }
