--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 body{
-    background-color: yellow;
+    background-color:rgb(86, 115, 231);
     color: white;
 
 }
