--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ img{
     width: 350px;
     height: 350px;
     border-radius: 50%;
-    border: 5px solid red;
+    border:none;
 }
 main{
     display: flex;
